BUG 2847, 2848, 2841, 2844: Various fixes * Don't allow inline editing of column names in views * Fix sidebar widths so pieces don't wrap * Change datepicker arrows, since the solid arrows didn't appear in IE * Fix various issues with group views: ** Editing invalid grouped view was throwing an error ** Above wasn't being marked as valid, since the message wasn't remove in Dataset when getting the view back ** Don't initially request rows for an invalid view (in fact, don't load grid at all) ** After editing an invalid view or when saving a regular grouped view after changing the grouped column, the newly-chosen column was hidden.  So make sure on saving a dataset/view that the visible columns are set correctly * Clean up some misc params in datasetGrid that weren't used anymore
QA:
* Make sure bugs are fixed

--- a/app/styles/grid-sidebar.sass
+++ b/app/styles/grid-sidebar.sass
@@ -287,7 +287,7 @@
           margin:
             left: -2px
             top: -3px
-          width: 13.1em
+          width: 12.9em
 
         .uploader
           width: 16.06em
@@ -476,11 +476,14 @@
               left: 0.1em
               top: 0.5em
 
+            textarea, input[type="text"]
+              width: 12.2em
+
             select
-              width: 13.1em
+              width: 12.9em
 
             &.columnSelect select.hasTable
-              width: 11em
+              width: 10.8em
 
           > .line
             border: 1px dashed transparent
